Refactor : changement appel pour récupérer le provider des zones 035. - Requete directe sur la table au lieu d'utiliser la fonction oracle - ajout dao + entity - retour objet unique au lieu d'une liste